--- a/index.html
+++ b/index.html
@@ -16,11 +16,7 @@
         <img src="loader.svg" alt="Loading">
     </div>
     <!-- Contenedor de Imagen -->
-    <div class="image-container" id="image-container">
-        <img src="https://images.unsplash.com/photo-1678644897380-65e32b963bb4?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1032&q=80" alt="">
-        <img src="https://images.unsplash.com/photo-1678644897380-65e32b963bb4?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1032&q=80" alt="">
-        <img src="https://images.unsplash.com/photo-1678644897380-65e32b963bb4?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1032&q=80" alt="">
-    </div>
+    <div class="image-container" id="image-container"></div>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
