--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Title -->>
     <h1> UNSPLASH API - INFINITE SCROLL </h1>
     <!-- Loader -->
-    <div class="loader" id="loader" hidden>
+    <div class="loader" id="loader">
         <img src="loader.svg" alt="Loading">
     </div>
     <!-- Contenedor de Imagen -->
